--- a/docs/.vuepress/styles/index.styl
+++ b/docs/.vuepress/styles/index.styl
@@ -7,3 +7,9 @@
 .home .hero img
   max-width 450px!important
   width 100%
+
+.sidebar-group a.sidebar-link
+    font-weight: bold;
+
+.sidebar-sub-headers a.sidebar-link
+    font-weight: normal;
